fix of bug on home page, main text moved down out of container. added position: absolute to .main-text class, and add margin-top:110px as well. bug fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,8 @@ footer {
     .main-text {
         width: 40%;
         align-self: center;
-        padding: 10px 0;
+        position: absolute;
+        margin-top: 110px;
     }
 
     h1 {
